观察找规律

--- a/前200总结/观察找规律/观察找规律.md
+++ b/前200总结/观察找规律/观察找规律.md
@@ -1,15 +1,48 @@
 ## 找规律
 找规律题目的重点就是发现规律，没有统一的一个模式
 ### 6. ZigZag Conversion
-- 题目大意： 通过指定的numRows，把原本输入的字符串s,按照z字形重排一下，然后按行输出
-- 规律：如果细心观察可以看到，
-### 32 longest valid parentheses
-情况1：string str1 = ")()()"
+![例子](https://github.com/binyi10/leetcode_todo/raw/master/题目的截图/6_0.png)
 
-情况2：string str2 = "(())"
-1. 如果不用DP的话，排序会有nlogn的复杂度
-2. DP：以当前这个字符结尾的最长括号匹配子序列的长度
-- 若：str[i] == '('，不可能有成功的括号匹配以'('结尾，因此DP[i] = 0;
-- 若：str[i] == ')'
-1. 根据情况1：若str[i-1] == '('，则DP[i] == DP[i-2]+2;
-2. 根据情况2：若str[i-1] == ')',则首先找到str[i-1]对应的最长匹配的开始的再前一个字符c = str[i-1-DP[i-1]]，如果c == '('，则可以匹配当前的str[i]，于是DP[i] = 2+DP[i-1] + DP[i-2-DP[I-1]],否认如果c == ')'，则不能匹配，因此，DP[i] = 0;
+
+- 题目大意： 通过指定的numRows，把原本输入的字符串s,按照z字形重排一下，然后按行输出。
+- 规律：如果细心观察可以看到：
+1. 第一行都是（numRows+numRows-2）的倍数,即k(2*numRows-2)
+2. 第二行为k(2*numRows-2)-1或者k(2*numRows-2)+1
+3. 第i行为k(2*numRows-2)-(i-1)或者k(2*numRows-2)+i-1
+4. 最后一行为k(2*numRows-2)+numRows-1
+
+- 代码：
+```cpp
+class Solution {
+public:
+    string convert(string s, int numRows) {
+        if(s.size()<=numRows)return s;
+        if(numRows == 1)return s;
+        string result = "";
+        for(int i = 0;i<numRows;i++)
+        {
+            for(int k = 0;;k++)
+            {
+                if(i == 0)
+                {
+                   if(k*(2*numRows-2) >= s.size())break;
+                   result += s[k*(2*numRows-2)];
+                }
+                else if(i == numRows - 1)
+                {
+                    if(k*(2*numRows-2)+i >= s.size())break;
+                    result += s[k*(2*numRows-2)+i];
+                }
+                else
+                {
+                    if(k>0 && (k*(2*numRows-2)-i) >= s.size()){break;}
+                    if(k*(2*numRows-2)-i >= 0)result += s[k*(2*numRows-2)-i];
+                    if(k*(2*numRows-2)+i >= s.size()){break;}
+                    result += s[k*(2*numRows-2)+i];
+                }
+            }
+        }
+        return result;
+    }
+};  
+```
